# advent-of-code

./: .gitignore  Cargo.toml  Makefile  README.md
.github/workflows/: rust.yml
inputs/2015/: 5b.txt  6b.txt  7a.txt  8a.txt
inputs/2016/: 3a.txt
inputs/2019/: 2.txt  4a.txt
inputs/2022/: 3a.txt  5.txt  5a.txt
src/: lib.rs  main.rs  traits.rs  types.rs  util.rs
src/y_2015/: d_1.rs  d_10.rs  d_11.rs  d_12.rs  d_2.rs  d_22.rs  d_3.rs  d_4.rs  d_5.rs  d_6.rs  d_7.rs  d_8.rs  d_9.rs  mod.rs
src/y_2016/: d_1.rs  d_2.rs  d_21.rs  d_3.rs  d_4.rs  d_5.rs  d_6.rs  d_7.rs  d_8.rs  d_9.rs  mod.rs
src/y_2017/: d_1.rs  d_2.rs
src/y_2018/: d_1.rs  d_2.rs  d_3.rs
src/y_2019/: d_1.rs  d_2.rs  d_3.rs  d_4.rs
src/y_2020/: d_1.rs  d_2.rs
src/y_2021/: d_1.rs  d_2.rs
src/y_2022/: d_01.rs  d_1.rs  d_10.rs  d_11.rs  d_12.rs  d_2.rs  d_3.rs  d_4.rs  d_5.rs  d_6.rs  d_7.rs  d_8.rs  d_9.rs  mod.rs
src/y_2023/: d_1.rs  d_2.rs  d_3.rs  d_4.rs  d_5.rs
src/y_2024/: d_1.rs
