[package]
name = "advent_of_code"
version = "0.1.0"
edition = "2021"
default-run = "advent_of_code"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.0"
dialoguer = "0.10.2"
md5 = "0.7.0"
regex = "1.7.0"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
