[package]
name = "advent_of_code"
version = "0.1.0"
edition = "2021"
default-run = "advent_of_code"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.1.0"
dialoguer = "0.11.0"
help = "0.0.0"
md5 = "0.7.0"
priority-queue = { version = "2.1.0", features = ["serde"] }
regex = "1.10.6"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = { version = "1.0.128", features = ["raw_value"] }
